dodanie tekstu w nowej galezi

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 	<p> dodanie tekstu w paragrafie </p>
 	<p> dodanie tekstu znowu</p>
+	<p> dodanie textu  w nowej galezi </p>
 	</body>
 </html>
 
