--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 	<p> dodanie tekstu w paragrafie </p>
-	<p> dodanie tekstu znowu</p>
+	<p> dodanie tekstu ZNOWU</p>
 	<p> dodanie textu  w nowej galezi </p>
 	</body>
 </html>
