bez slowa dodanie

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<h1> naglowek ze zmiana</h1>
 
 
-	<p> dodanie tekstu w paragrafie </p>
+	<p> tekstu w paragrafie </p>
 	<p> dodanie tekstu ZNOWU</p>
 	<p> dodanie textu  w nowej galezi </p>
 	</body>
